# nootification

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  third_party.py
nootification/: .coveragerc  README.md  e2e.py  initial_data.json  manage.py
nootification/alerts/: api.py  models.py  tests.py  urls.py  views.py
nootification/alerts/migrations/: 0001_initial.py
nootification/messages/: __init__.py  api.py  models.py  services.py  tests.py
nootification/nootification/: asgi.py  constants.py  settings.py  urls.py  wsgi.py
nootification/stores/: api.py  apps.py  models.py  tests.py  urls.py  views.py
nootification/stores/migrations/: 0001_initial.py
